fix: opening pr to test line breaks on mobile

--- a/styles/publicassembly.css
+++ b/styles/publicassembly.css
@@ -9,7 +9,7 @@
 
 /* LAYOUT */
 .pa-pageLayout {
-  @apply px-4 
+  @apply px-4 sm:px-8 
   /* sm:container */
   /* mx-auto */
 }
@@ -34,7 +34,6 @@
 /* COMPONENTS */
 .pa-input {
   background: white;
-  border: 4px solid var(--pa__text-dark);
   -webkit-appearance: none;
   border-radius: 0;
   caret-color: var(--pa__pink);
